Se creo las primeras entidades y gestoras detectadas

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Sistemas/RestauranteServer/nbproject/private/
 /Sistemas/AppMozos/nbproject/private/
 /Sistemas/AppGestores/nbproject/private/
+/Sistemas/RestauranteServer/build/
+/Sistemas/RestauranteServer/dist/
