Implementación RMI Server, sin terminar implementación de cliente en app mozos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Sistemas/AppGestores/nbproject/private/
 /Sistemas/RestauranteServer/build/
 /Sistemas/RestauranteServer/dist/
+/Sistemas/AppMozos/build/
