Creacion de proyecto intermediario, login implementado

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 /Sistemas/RestauranteServer/dist/
 /Sistemas/AppMozos/build/
 /Sistemas/AppGestores/build/
+/Sistemas/InterfaceRMI/nbproject/private/
+/Sistemas/InterfaceRMI/build/
+/Sistemas/InterfaceRMI/dist/
+/Sistemas/RMIStuff/nbproject/private/
+/Sistemas/RMIStuff/build/
+/Sistemas/RMIStuff/dist/
+/Sistemas/RestauranteService/nbproject/private/
+/Sistemas/RestauranteService/build/
+/Sistemas/RestauranteService/dist/
