--- a/Sistemas/RestauranteServer/nbproject/project.properties
+++ b/Sistemas/RestauranteServer/nbproject/project.properties
@@ -31,7 +31,8 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.RestauranteService.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +62,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.RestauranteService=../RestauranteService
+reference.RestauranteService.jar=${project.RestauranteService}/dist/RestauranteService.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
