--- a/Sistemas/RestauranteService/nbproject/project.properties
+++ b/Sistemas/RestauranteService/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AppMozos
-application.vendor=Juanchi Perez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,14 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AppMozos.jar
+dist.jar=${dist.dir}/RestauranteService.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.RestauranteService.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,13 +54,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=appmozos.AppMozos
+main.class=restauranteservice.RestauranteService
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.RestauranteService=../RestauranteService
-reference.RestauranteService.jar=${project.RestauranteService}/dist/RestauranteService.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
