--- a/Sistemas/AppMozos/nbproject/project.properties
+++ b/Sistemas/AppMozos/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=appmozos.AppMozos
+main.class=app.AppMozos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
