--- a/Sistemas/AppGestores/nbproject/project.properties
+++ b/Sistemas/AppGestores/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=app.AppGestores
+main.class=appgestore.AppGestores
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
