Implementación MesaTableModel y MesaCellRenderer

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Sistemas/RestauranteService/nbproject/private/
 /Sistemas/RestauranteService/build/
 /Sistemas/RestauranteService/dist/
+/Sistemas/AppMozo/nbproject/private/
+/Sistemas/AppMozo/build/
