--- a/Sistemas/AppMozo/nbproject/project.properties
+++ b/Sistemas/AppMozo/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AppMozos
+application.title=AppMozo
 application.vendor=Juanchi Perez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AppMozos.jar
+dist.jar=${dist.dir}/AppMozo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -57,12 +57,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=appmozo.AppMozos
+main.class=aplicacionmozo.AplicacionMozo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.RestauranteService=../RestauranteService
+project.RestauranteService=../obligatoriodda/Sistemas/RestauranteService
 reference.RestauranteService.jar=${project.RestauranteService}/dist/RestauranteService.jar
 run.classpath=\
     ${javac.classpath}:\
