--- a/Sistemas/AppMozo/nbproject/project.properties
+++ b/Sistemas/AppMozo/nbproject/project.properties
@@ -63,7 +63,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.RestauranteService=../obligatoriodda/Sistemas/RestauranteService
+project.RestauranteService=../RestauranteService
 reference.RestauranteService.jar=${project.RestauranteService}/dist/RestauranteService.jar
 run.classpath=\
     ${javac.classpath}:\
