--- a/Sistemas/AppGestores/nbproject/project.properties
+++ b/Sistemas/AppGestores/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.RestauranteService.jar}
+    ${reference.RestauranteService.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
